<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TestActivity!</string>
    <string name="app_name">TestApp</string>
    
    <string name="EditWarnActivity">EditWarn</string>
    <string name="ViewWarnActivity">ViewWarn</string>
    
    <string name="txt_btn_insert">Insert</string>
    <string name="txt_btn_view">View</string>
    <string name="txt_btn_ok">确认</string>
    <string name="txt_btn_cancel">取消</string>
    <string name="txt_btn_bind">Bind</string>
    <string name="txt_btn_unbind">Unbind</string>
    <string name="txt_btn_post">Post an contact</string>
    <string name="txt_btn_delete">Delete an contact</string>
    <string name="txt_btn_query">Query an contact</string>
    <string name="txt_btn_update">Update an contact</string>
    
    <string name="edit_interval_hint">interval time</string>
    <string name="edit_message_hint">message</string>
    <string name="edit_title_hint">title</string>
</resources>
