<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/hello"
	    />
	<Button 
	    android:id="@+id/insert"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_btn_insert"/>
	<Button 
	    android:id="@+id/view"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_btn_view"/>
	<Button
	    android:id="@+id/bind"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_btn_bind"/>
	<Button
		android:id="@+id/post"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_btn_post"/>
	<Button
		android:id="@+id/delete"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_btn_delete"/>
	<Button
		android:id="@+id/query"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_btn_query"/>
	<Button
		android:id="@+id/update"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_btn_update"/>
	<Button
	    android:id="@+id/unbind"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_btn_unbind"/>
    
</LinearLayout>
