<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <DatePicker 
	           android:layout_height="wrap_content" 
	           android:layout_width="fill_parent" 
	           android:id="@+id/trigger_date"/>
		    <TimePicker 
			   android:layout_height="wrap_content" 
			   android:layout_width="fill_parent" 
			   android:id="@+id/trigger_time"/>
        </LinearLayout>
	    <Spinner
	        android:id="@+id/repeat_type"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/repeat_type"/>
	    <EditText
	        android:id="@+id/interval_time"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:numeric="signed"
	        android:hint="@string/edit_interval_hint"/>
	    <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <DatePicker
	        android:id="@+id/finish_date"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
	        <TimePicker
	            android:id="@+id/finish_time"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"/>
	    </LinearLayout>
	    <EditText
	        android:id="@+id/message"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/edit_message_hint"/>
	     <EditText
	        android:id="@+id/title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/edit_title_hint"/>
	     <Spinner
	        android:id="@+id/show_type"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/show_type"/>
	     <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/commit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_btn_ok"/>
            <Button
                android:id="@+id/cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_btn_cancel"/>
         </LinearLayout>
    </LinearLayout>
</ScrollView>